# yume

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  LICENSE  justfile
.github/: README.md
.github/workflows/: ci.yml
.sqlx/: query-100c18dc9d567b5731a3a4a97b5463ee13d0381b1deefb4676a5218b1a119a9e.json  query-1de6d2e37d4acea2d8ab81aaf4966ff774e67dd0f5821e0c0ba678618ccd07c2.json  query-2932ab5909e5e44ff5c658c1b1f156e8d8779a7bc88686bf363bd13a304feb86.json  query-3513d630435a58412b6ad4a2be973316f27c443defe8526a36edb3b247f464a8.json  query-3e8e51d05b6cf0a365dd8696de6311da8d8983b2c477004adaf1bbb6a3bfc069.json  query-4be62e470ee387c1885c368f55428e395560be44ee3acca4a78aa2481efcc1db.json  query-53976fa992ab18cc4160551fdd11c8b282e4ff0a53d106e93845bea7f4e6a6b7.json  query-5fff5ed007608de71984d10d026b13be0463f01e0ebe7feaee96523072a818ca.json  query-6181d984358e774d3289367cff8f403908a8fcd38a15d000b5fb5b1dd12fb0eb.json  query-8e87950e75a0892e2a6b6344ffcc1747cdefc7a3c63657c3760ed9cbc09c8c92.json  query-9de4ad81fffb578e8c846710af614fab07e1b78d09f7810a95b4731dbdeb59f2.json  query-ae750e9e50b3ce25490663982030d9ebabf475f163e8a5ecebd9a7bbadab9375.json  query-b0549d74324d2aa3998da171dbce8f8eb33af25d0156a5fe57b1bffd5485c7bc.json  query-b5c382a6a5e799cf3f890c32e52432ecf32f4867c4fe2028632276610c81f609.json  query-c4cf7b1e2b282b6a62ba6a655c09581a4294d83bddf4c87c83a492d7bb569cde.json  query-fb93a3cc504fc119df48f9b74294de6fc70bca5bfa3ff36fc5078eb1f3686487.json  query-fcd8c407981b0abe9d4e6b7daffd5d5afa97f37068bf56d68914c06a82b5c047.json
migrations/: 20260405172004_create_sites.sql  20260405190429_add_checker_files.sql  20260405222740_create_applications.sql  20260406120000_fix_position_unique.sql  20260406124444_add_application_fields.sql  20260406130728_add_site_favicon.sql  20260406145152_add_application_slug_unique.sql  20260406160743_make_position_deferrable.sql
src/: error.rs  main.rs  state.rs
src/features/: csrf.rs  flash.rs  mod.rs  rate_limit.rs  validation.rs
src/features/applications/: handlers.rs  mod.rs  models.rs
src/features/auth/: handlers.rs  middleware.rs  mod.rs  models.rs
src/features/checker/: worker.rs
src/features/favicon/: mod.rs
src/features/pages/: home.rs  mod.rs
src/features/sites/: cache.rs  handlers.rs  mod.rs  models.rs
static/: main.css  reset.css
templates/: apply.html  base.html
templates/admin/: applications.html  dashboard.html  login.html
templates/home/: index.html
