[package]
name = "yume"
version = "1.0.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
mimalloc = "0.1"
serde = { version = "1", features = ["derive"] }
socket2 = "0.6"
dotenvy = "0.15"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "macros", "uuid"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
uuid = { version = "1", features = ["v4", "serde"] }